--- a/html/pop.html
+++ b/html/pop.html
@@ -17,6 +17,7 @@
 	        <div class="xb-btn xb-btn-info" tapmode onclick="showPopup('bottom-left')">左下角</div>
 	        <div class="xb-btn xb-btn-info" tapmode onclick="showPopup('bottom')">底部中间</div>
 	        <div class="xb-btn xb-btn-info" tapmode onclick="showPopup('bottom-right')">右下角</div>
+	        <div class="xb-btn xb-btn-info" tapmode onclick="showPopup('center')">中间</div>
 	    </section>
 	    <section class="xb-content-padded">
 	        <p>点击了第<strong class="xb-text-danger" id="button-index"></strong>个按钮（buttonIndex）</p>
